# opentdf-python-sdk

./: .env-docker  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-config-develop.json  .release-please-config.json  .release-please-manifest-develop.json  .release-please-manifest.json  CHANGELOG.md  CONNECT_RPC_MIGRATION.md  LICENSE  PROTOBUF_SETUP.md  README.md  RELEASES.md  ci-build.sh  conftest.py  go.mod  go.sum  main.go  make_and_validate_script.sh  otdf_python_test.go  pyproject.toml  setup.py  setup_ci.py  validate_otdf_python.py
.gemini/: config.yaml
.github/: check_entitlements.sh  dependabot.yml  start_opentdf_docker.sh
buf-build/: list_wheel_modules.py  setup.py  uv_buf_build_script.sh
build-scripts/: ci-build.sh  docker-compose.yml  make_and_validate_script.sh  uv_buf_build_script.sh  uv_make_and_validate_script.sh
docs/: CONNECT_RPC.md  DEVELOPING.md  LEGACY_VERSION.md  PROTOBUF_SETUP.md  RELEASES.md
otdf-python-proto/: CHANGELOG.md  README.md  buf.gen.yaml  buf.yaml  pyproject.toml
otdf-python-proto/proto-files/policy/kasregistry/: key_access_server_registry.proto
otdf-python-proto/scripts/: build_connect_proto.sh  generate_connect_proto.py  setup_connect_rpc.py
otdf-python-proto/src/otdf_python_proto/: __init__.py
otdf-python-proto/src/otdf_python_proto/authorization/: __init__.py  authorization_connect.py  authorization_pb2.py  authorization_pb2.pyi  authorization_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/authorization/v2/: authorization_pb2.py  authorization_pb2.pyi  authorization_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/common/: common_pb2.py  common_pb2.pyi
otdf-python-proto/src/otdf_python_proto/entity/: entity_pb2.py  entity_pb2.pyi
otdf-python-proto/src/otdf_python_proto/entityresolution/: __init__.py  entity_resolution_connect.py  entity_resolution_pb2.py  entity_resolution_pb2.pyi  entity_resolution_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/entityresolution/v2/: entity_resolution_connect.py  entity_resolution_pb2.py  entity_resolution_pb2.pyi  entity_resolution_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/kas/: __init__.py  kas_connect.py  kas_pb2.py  kas_pb2.pyi  kas_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/: __init__.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/authorization/: authorization_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/authorization/v2/: authorization_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/entityresolution/: entity_resolution_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/entityresolution/v2/: entity_resolution_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/kas/: kas_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/actions/: actions_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/attributes/: attributes_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/kasregistry/: key_access_server_registry_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/keymanagement/: key_management_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/namespaces/: namespaces_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/obligations/: obligations_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/registeredresources/: registered_resources_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/resourcemapping/: resource_mapping_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/policy/unsafe/: unsafe_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/legacy_grpc/wellknownconfiguration/: wellknown_configuration_pb2_grpc.py
otdf-python-proto/src/otdf_python_proto/logger/: __init__.py
otdf-python-proto/src/otdf_python_proto/policy/: __init__.py  objects_pb2.py  objects_pb2.pyi
otdf-python-proto/src/otdf_python_proto/policy/actions/: __init__.py  actions_connect.py  actions_pb2.py  actions_pb2.pyi  actions_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/policy/attributes/: __init__.py  attributes_connect.py  attributes_pb2.py  attributes_pb2.pyi  attributes_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/policy/kasregistry/: key_access_server_registry_connect.py  key_access_server_registry_pb2.py  key_access_server_registry_pb2.pyi  key_access_server_registry_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/policy/keymanagement/: key_management_pb2.py  key_management_pb2.pyi  key_management_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/policy/namespaces/: __init__.py  namespaces_connect.py  namespaces_pb2.py  namespaces_pb2.pyi  namespaces_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/policy/obligations/: obligations_connect.py  obligations_pb2.py  obligations_pb2.pyi
otdf-python-proto/src/otdf_python_proto/policy/registeredresources/: __init__.py  registered_resources_connect.py  registered_resources_pb2.pyi  registered_resources_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/policy/resourcemapping/: resource_mapping_pb2.pyi  resource_mapping_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/policy/subjectmapping/: __init__.py  subject_mapping_connect.py  subject_mapping_pb2.py  subject_mapping_pb2.pyi  subject_mapping_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/policy/unsafe/: __init__.py  unsafe_pb2.py  unsafe_pb2.pyi  unsafe_pb2_connect.py
otdf-python-proto/src/otdf_python_proto/wellknownconfiguration/: __init__.py  wellknown_configuration_connect.py  wellknown_configuration_pb2.pyi  wellknown_configuration_pb2_connect.py
otdf-python-proto/tests/: test_generate_connect_proto.py
tests/: __init__.py  config_pydantic.py  mock_crypto.py  server_logs.py  support_cli_args.py  support_common.py  support_otdfctl.py  support_otdfctl_args.py  test_address_normalizer.py  test_aesgcm.py  test_assertion_config.py  test_asym_encryption.py  test_autoconfigure_utils.py  (+44 more)
(+114 files in other folders)
